module8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpsvc
  namespace: prod
spec:
  ClusterIP: None
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: httpserver
